style.css
/* ... */
/* FONT SIZE FOR LARGER DEVICES */
@media screen and (min-width: 968px) {
  :root {
    --big-font-size: 3rem;
    --h1-font-size: 2.5rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: 0.875rem;
    --smaller-font-size: 0.813rem;
  }
}

/* =========== VARIABLE COLOR DARK THEME ============ */
body.dark-theme {
  /* HSL Color Mode */
  --first-color: hsl(var(--hue-color), 69%, 58%); /* Not changed */
  --first-color-second: hsl(var(--hue-color), 30%, 8%);
  --first-color-alt: hsl(var(--hue-color), 55%, 50%); /* Not changed */
  --first-color-lighter: hsl(var(--hue-color), 90%, 82%); /* Not changed */

  --title-color: hsl(var(--hue-color), 10%, 95%);
  --text-color: hsl(var(--hue-color), 10%, 75%);
  --mainText: hsl(var(--hue-color), 10%, 75%);
  --text-color-light: hsl(var(--hue-color), 10%, 65%); /* Not changed */
  --input-color: hsl(var(--hue-color), 29%, 16%);
  --body-color: hsl(var(--hue-color), 30%, 14%);
  --container-color: hsl(var(--hue-color), 30%, 16%);
  --scroll-bar-color: hsl(var(--hue-color), 10%, 50%);
  --scroll-thumb-color: hsl(var(--hue-color), 15%, 32%);

  --background-body-color: rgba(255, 255, 255, 0.068);
  --border-color: rgba(255, 255, 255, 0.425);
  --border-style: solid;
  --footer-color: hsl(250, 53%, 18%);
}


* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0 0 var(--header-height) 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background-color: var(--body-color);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

.header {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: var(--z-fixed);
  background-color: var(--body-color);
  margin-right: var(--mb-0-25);
}

.nav {
  max-width: 968px;
  height: var(--header-height);
  display: -webkit-box;
  justify-content: space-between;
  align-items: center;
  margin-left: var(--mb-0-5);
  margin-right: var(--mb-0-25);
}

.container {
  margin-right: auto;
}

.navbar-brand {
  font-family: var(--robotomono-font);
}

.nav__menu {
  padding: 2rem 0.25rem 4rem;
}

.nav__list {
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
}

.grid {
  display: grid;
}

/* .nav__item {

} */

.nav__icon {
  font-size: 1.2rem;
}

.nav__link {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: var(--small-font-size);
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__link:hover {
  color: var(--first-color);
}

.nav__logo,
.nav__toggle {
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__logo:hover {
  color: var(--first-color);
}

.nav__close {
  position: absolute;
  right: 1.3rem;
  bottom: 0.5rem;
  font-size: 1.5rem;
  cursor: pointer;
  color: var(--first-color);
}

.nav__close:hover {
  color: var(--first-color-alt);
}

.section {
  padding: 2rem 0 4rem;
  margin: auto;
  min-height: 80vh;
}

.section__title {
  font-size: var(--big-font-size);
  font-family: var(--gullible-font);
}

.section__subtitle {
  display: block;
  font-size: var(--small-font-size);
  margin-bottom: var(--mb-3);
  color: var(--text-color);
}

.section__title,
.section__subtitle {
  text-align: center;
}

.card_skill {
  position: relative;
  width: 150px;
  height: 200px;
  border-radius: 15px;
  overflow: hidden;
  margin: auto;
  padding: 2em;
  text-shadow: 0 0 1em transparent(black, 0.5);
  backdrop-filter: blur(20px);
  transform: perspective(500px);
  transform-style: preserve-3d;
}
.card_skill::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--first-color-lighter);
  clip-path: circle(100px at 80% 20%);
  transition: 0.5s ease-in-out;
}

.card_skill:hover::before {
  clip-path: circle(280px at 80% -20%);
  transition: scale(1.08);
}

.card_skill::after {
  content: "";
  position: absolute;
  top: 30%;
  left: -20%;
  font-size: var(--h2-font-size);
  font-style: italic;
  color: var(--text-color);
}
.imgBox {
  position: absolute;
  width: 100px;
  height: 100px;
  transition: 0.5s;
  transform: translate(5%, -10%);
  object-fit: fill;
}

.card_skill:hover .imgBox {
  width: 150px;
  height: 150px;
  transform: translate(-20%, -10%);
}

.contentBox {
  display: flex;
  align-content: space-between;
  text-align: center;
  position: relative;
  width: 0%;
  height: 0%;
  transform: scale(0);
  transition: 1s;
}

.card_skill:hover .contentBox {
  display: flex;
  height: 100%;
  width: 70%;
  position: relative;
  object-fit: cover;
  text-align: center;
  transform: translate(-42%, 92%);
  transition: 1.5s;
}

.cardskill .contentBox h2 {
  position: relative;
  font-weight: var(--font-medium);
  color: var(--text-color);
  margin: 0;
  padding: 0;
}

.shadow2 {
  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12);
}

.row .skills__container-card {
  /* width: 100%;
  display: flex;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px; */
  position: relative;
  display: grid;
  width: auto;
  height: auto;
  padding-bottom: var(--mb-0-75);
  margin: auto;
  margin-bottom: var(--mb-2);
}

.skills__container-card {
  position: relative;
  display: grid;
  width: auto;
  height: auto;
  padding-bottom: var(--mb-0-75);
  margin: auto;
  margin-bottom: var(--mb-2);
}

.skills__container-card:hover {
  transform: scale(1.1);
  transition: 0.3s;
}


/* HOME */

.home {
  height: 70vh;
  align-content: space-between;
  margin-top: var(--mb-3);
  padding-bottom: 0;
  margin-bottom: var(--mb-2);
}

.home__container {
  display: flex;
  gap: 1.75rem;
  padding-left: 0;
  margin-left: var(--mb-1);
  justify-content: space-around;
  align-items: center;
}
/* ... */

